Restrict Frame Range not being obeyed #36950

Closed
opened 2013-10-04 10:53:35 +02:00 by Nick Adams · 7 comments

%%%--- Operating System, Graphics card ---
Windows 7 Pro, nVidia Quadro 4000

- Blender version with error, and version that worked ---

Official BF version 2.68 (r58368)

- Short description of error ---

Restrict Frame Range does not appear to work: driven item still follows its driver even outside restricted frame range.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The attached simplified blend file demonstrates the issue (drag the time line marker in the Graph editor):

  1. Sphere's Z-Loc has been animated between frames 1-20.
  2. Cube's Z-Loc is driven by sphere's Z-Loc. In general, cube correctly follows sphere as sphere moves.
  3. BUT: Although Restrict Frame Range has been set to Start: 5, End:15, cube still follows sphere outside this frame range, even though the red driver graph shows there should be a step change at frames 5 and 15.

Expected behaviour:
a) Cube should remain static until frame 5.
b) Cube's Z-Loc should then jump to match sphere's Z-Loc, and follow sphere's Z-Loc until frame 15.
c) After frame 15, cube should stop following sphere and remain static.

%%%

%%%--- Operating System, Graphics card --- Windows 7 Pro, nVidia Quadro 4000 - Blender version with error, and version that worked --- Official BF version 2.68 (r58368) - Short description of error --- Restrict Frame Range does not appear to work: driven item still follows its driver even outside restricted frame range. - Steps for others to reproduce the error (preferably based on attached .blend file) --- The attached simplified blend file demonstrates the issue (drag the time line marker in the Graph editor): 1) Sphere's Z-Loc has been animated between frames 1-20. 2) Cube's Z-Loc is driven by sphere's Z-Loc. In general, cube correctly follows sphere as sphere moves. 3) BUT: Although Restrict Frame Range has been set to Start: 5, End:15, cube still follows sphere outside this frame range, even though the red driver graph shows there should be a step change at frames 5 and 15. Expected behaviour: a) Cube should remain static until frame 5. b) Cube's Z-Loc should then jump to match sphere's Z-Loc, and follow sphere's Z-Loc until frame 15. c) After frame 15, cube should stop following sphere and remain static. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%bug confirmed. This goes back as far as 2.60 at least, but probably even more.
the sample file has a 'lib missing' warning, but nothing that affects the result.%%%

%%%bug confirmed. This goes back as far as 2.60 at least, but probably even more. the sample file has a 'lib missing' warning, but nothing that affects the result.%%%

%%%Actually I don't know if it's a bug or how the features is designed to work.

Basically the modifiers are only affecting fcurves, not drivers.
attached RestrictFrameRangeWorking.blend showing the modifier in the fcurve as it was supposed to work.

@Joshua, any final say on it? If this is really the designed case I think we should hide the modifiers from the interface for drivers.%%%

%%%Actually I don't know if it's a bug or how the features is designed to work. Basically the modifiers are only affecting fcurves, not drivers. attached RestrictFrameRangeWorking.blend showing the modifier in the fcurve as it was supposed to work. @Joshua, any final say on it? If this is really the designed case I think we should hide the modifiers from the interface for drivers.%%%
Member

%%%This really isn't working "as intended" or any logical way.

It took a bit of digging to figure out what is actually going wrong here:

  • Currently, with no keyframes or modiifers, drivers default to using the "evaltime" as their value. This is done by setting "cvalue" to this value before doing any evaluation of keyframes or modiifers
  • The restrict range option simply restricts when the F-Modifier is allowed to write/overwrite the results of cvalue.
  • This bug occurs when cvalue already has some non-zero value, but the modifier is not producing any output to overwrite this

It's not sufficient to have unapplyable modifiers clearing cvalue when they can't run (i.e. this will break the ability to use mutliple modifiers for different segments), or to not set cvalue at all (i.e. this breaks when a generator is set to additive on top of the raw results). Any other solutions I've missed?%%%

%%%This really isn't working "as intended" or any logical way. It took a bit of digging to figure out what is actually going wrong here: - Currently, with no keyframes or modiifers, drivers default to using the "evaltime" as their value. This is done by setting "cvalue" to this value before doing any evaluation of keyframes or modiifers - The restrict range option simply restricts when the F-Modifier is allowed to write/overwrite the results of cvalue. - This bug occurs when cvalue already has some non-zero value, but the modifier is not producing any output to overwrite this It's not sufficient to have unapplyable modifiers clearing cvalue when they can't run (i.e. this will break the ability to use mutliple modifiers for different segments), or to not set cvalue at all (i.e. this breaks when a generator is set to additive on top of the raw results). Any other solutions I've missed?%%%
Member

%%%Fixed in svn.%%%

%%%Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Does 'Fixed' mean the driver will now work as described in "Expected behaviour" above? If so, that's fantastic and many, many thanks! :-)

It will now be very easy to make my robot appear to pick up an object and put it down elsewhere, simply by restricting the frame range during which the object follows the robot hand's location. %%%

%%%Does 'Fixed' mean the driver will now work as described in "Expected behaviour" above? If so, that's fantastic and many, many thanks! :-) It will now be very easy to make my robot appear to pick up an object and put it down elsewhere, simply by restricting the frame range during which the object follows the robot hand's location. %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36950
No description provided.